* vm_eval.c: [DOC] [Bug #9551] Improve clarity of Kernel::catch   documentation, patch by Jesse Sielaff.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@46985 b2dd03c8-39d4-4d8f-98ff-823fe69b080e